--- a/Style.css
+++ b/Style.css
@@ -174,6 +174,14 @@ input:focus{
     text-decoration: none;
     color: black;
     font-weight: bold;
+    position: relative;
+}
+
+#underline{
+    position: absolute;
+    right: -10px;
+    bottom: -15px;
+    height: 15px;
 }
 
 #login-card--review{
@@ -254,7 +262,7 @@ input:focus{
     }
 
     #login-card--form{
-        padding: 40px 10px 110px 10px;
+        padding: 40px 15px 130px 15px;;
     }
 
     #logo-container{
