--- a/Style.css
+++ b/Style.css
@@ -55,10 +55,17 @@ input:hover{
 }
 
 label{
-    display: block;
+    display: flex;
+    justify-content: space-between;
     font-size: 11px;
     font-weight: 600;
     margin-bottom: 5px;
+}
+
+.err-mssg{
+    color: red;
+    font-weight: lighter;
+    display: none;
 }
 
 input{
@@ -254,7 +261,8 @@ input:focus{
 @media(max-width: 430px){
     .login-card{
         grid-template-columns: 1fr;
-        width: 90%;
+        width: 100%;
+        height: 100%;
     }
 
     #login-card--review{
